api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  # Задаётся кол-во реплик контейнера, из параметра template,
  # который описывает контейнер ниже.
  replicas: 1
  selector:
    matchLabels:
      components: backend # здесь можно какое угодно наименование ключа использовать
    # Шаблон пода
  template:
    # По сути это копия metadata из файла pod.yml без name
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m" # полная загрузка, 500m - 50%, 250M - 25%, 125 - 12,5%, 100 - 10%
          volumeMounts:
            - name: api-data
              mountPath: /opt/app/uploads
              subPath: api
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
