pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app # конвертер изображений
  labels:
    components: frontend
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "4000Mi"
          cpu: "1000m" # полная загрузка, 500m - 50%
