rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  # Задаётся кол-во реплик контейнера, из параметра template,
  # который описывает контейнер ниже.
  replicas: 1
  selector:
    matchLabels:
      components: rmq
    # Шаблон пода
  template:
    # По сути это копия metadata из файла pod.yml без name
    metadata:
      labels:
        components: rmq
    spec:
      containers:
        - name: rmq
          image: rabbitmq:3.13.7
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m" # полная загрузка, 500m - 50%, 250M - 25%, 125 - 12,5%, 100 - 10%
          volumeMounts:
            - name: rmq-data
              mountPath: /var/lib/rabbitmq
              subPath: rmq
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
