service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 3001
      protocol: TCP
  selector:
    components: backend
